<resources>
    <string name="app_name">Login</string>
    <string name="title">Formulário</string>
    <string name="question1">Qual sua faixa etária?</string>
    <string name="radio1">10 - 18</string>
    <string name="radio2">19 - 25</string>
    <string name="radio3">26 em diante</string>
    <string name="question2">Quais seus interesses?</string>
    <string name="check1">Música</string>
    <string name="check2">Jogos</string>
    <string name="check3">Programação</string>
    <string name="check4">Culinária</string>
    <string name="question3">Deseja receber um email com as novidades e atualizações?</string>
</resources>